--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/amokrushin/ipw-loader/issues"
   },
-  "homepage": "https://github.com/amokrushin/ipw-loader#readme"
+  "homepage": "https://github.com/amokrushin/ipw-loader#readme",
+  "dependencies": {
+    "async": "^1.5.0",
+    "cross-spawn-async": "^2.1.1",
+    "jsonwebtoken": "^5.4.1",
+    "node-uuid": "^1.4.7",
+    "request": "^2.67.0"
+  }
 }
