--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cross-spawn-async": "^2.1.1",
     "jsonwebtoken": "^5.4.1",
     "node-uuid": "^1.4.7",
-    "request": "^2.67.0"
+    "request": "^2.67.0",
+    "winston": "^2.1.1"
   }
 }
