--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "async": "^1.5.0",
     "cross-spawn-async": "^2.1.1",
+    "ipw": "git+https://github.com/amokrushin/ipw.git",
     "jsonwebtoken": "^5.4.1",
     "node-uuid": "^1.4.7",
     "request": "^2.67.0",
