--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ipw-loader",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "",
   "main": "app.js",
   "scripts": {
@@ -21,6 +21,7 @@
     "cross-spawn-async": "^2.1.1",
     "ipw": "git+https://github.com/amokrushin/ipw.git",
     "jsonwebtoken": "^5.4.1",
+    "nconf": "^0.8.2",
     "node-uuid": "^1.4.7",
     "request": "^2.67.0",
     "winston": "^2.1.1"
